--- a/Week 2/2 Programs/week02.ipynb
+++ b/Week 2/2 Programs/week02.ipynb
@@ -64,7 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "id": "86942331",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "a98558e3",
    "metadata": {},
    "outputs": [],
@@ -77,7 +87,7 @@
    "id": "e224f129",
    "metadata": {},
    "source": [
-    "# Header 1\n",
+    "    # Header 1\n",
     "## Header 2\n",
     "### Header 3\n",
     "#### Header 4\n",
@@ -125,7 +135,8 @@
    "id": "08ae8ba0",
    "metadata": {},
    "source": [
-    "~~Strikethrough~~"
+    "~~Strikethrough~~\n",
+    "~~Never mind~~ \n"
    ]
   },
   {
@@ -146,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "299efb91",
    "metadata": {},
    "outputs": [],
@@ -172,12 +183,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "05dfd734",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# just type!"
+    "# one or more line breaks"
    ]
   },
   {
@@ -186,6 +197,7 @@
    "metadata": {},
    "source": [
     "Hello World!\n",
+    "\n",
     "We are learning Markdown."
    ]
   },
@@ -530,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "2ab32335",
    "metadata": {},
    "outputs": [
@@ -541,7 +553,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8976\\2697629934.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(lst)\n",
       "\u001b[1;31mNameError\u001b[0m: name 'lst' is not defined"
      ]
     }
@@ -555,7 +567,7 @@
    "id": "380b79d9-6ba7-4fb8-9794-b5889792bd32",
    "metadata": {},
    "source": [
-    "Add blocl code using **syntax highlighting** based on the coding language you are using:"
+    "Add block code using **syntax highlighting** based on the coding language you are using:"
    ]
   },
   {
